task-0815:Complete ai agentic workflow support